# rwcockpit

./: .gitignore  Cargo.toml  README.md  laminar_a330.toml
aircraft/airbus/A320/: panels.md
cockpitd/: Cargo.toml
cockpitd/src/: main.rs
hubfw/: CMakeLists.txt
hubfw/src/: main.c
panelfw/: CMakeLists.txt
panelfw/src/: main.c
rwcockpitplugin/: Cargo.toml
rwcockpitplugin/src/: lib.rs
rwcommon/: Cargo.toml
rwcommon/src/: lib.rs
